Fixed blog issue, minor fix and update landing UI

--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Blog
+permalink: /blog/
 ---
 
 <div class="blog-page">
@@ -23,3 +24,4 @@ title: Blog
     {% endfor %}
   </div>
 </div>
+
